[tool.poetry]
name = "ep"
version = "1.0.0"
description = "A different kind of discord bot framework"
authors = ["mental <m3nta1@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
"discord.py" = "^1.2.5"
coloredlogs = "^10.0"
toml = "^0.10.0"
websockets = "=6"
blessings = "^1.7"
aioconsole = "^0.1.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
